src/scss/ui/components/LostActionsDivGen.scss
.Testing {
    display: flex;
    flex-direction: column;
    background-color: black;
    //height: 350px;
    width: 370px;
    margin: 0px;
    padding: 0px;
    color: white;
}

.Testing1 {
    display: flex;
    flex-direction: row;
    justify-content: center;
    height: 80px;

    .Testing1Inner1 {
        display: flex;
        flex-direction: row;
        width: 50%;
        align-items: center;
        
        p {
            margin: 0px;
            padding: 5px 0px;
        }

        .Testing1Inner1Inner {
            padding-left: 15px;
            align-items: start;
            

            .TestingActionName {
                font-size: 20px;
            }
        }
    }


    .Testing1Inner2 {
        display: flex;
        flex-direction: row;
        width: 50%;
        justify-content: center;
        align-items: end;
        
        .Testing1Inner2Inner1 {
            width: 50%;
            padding-left: 10px;
        }

        .Testing1Inner2Inner2 {
            width: 50%;
        }

    }
}

.Testing2 {
    display: flex;
    flex-direction: row;
    text-align: end;
    
    .Testing2Inner1 {
        width: 33%;
        
    }

    .Testing2Inner2 {
        width: 33%;
    }

    .Testing2Inner3 {
        width: 33%;
    }
}

.Testing3 {
    margin-bottom: 5px;
}

.Testing4 {
    display: flex;
    flex-direction: row;

    .Testing4Inner1 {
        width: 25%;
    }

    .Testing4Inner2 {
        width: 75%;
        font-size: 20px;
    }
}

